feat:Added border radius to the featured section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,36 @@
   background-image: url("/images/gray-next-arrow.webp"); /* Custom next arrow image */
 }
 
-.clip-path-custom {
-  clip-path: polygon(30% 0, 100% 0, 100% 100%, 0 100%, 0 34%, 30% 34%);
+/* .clip-path-custom {
+  clip-path: polygon(30% 0, 100% 0, 100% 100%, 0 100%, 0 34%, 30% 34% );
+} */
+/* .clip-path-custom {
+  clip-path: inset(10% 20% 30% 40% round 0 0 0 50%);
+} */
+
+
+.masking_class::before {
+  content: "";
+  position: absolute;
+  right: -40px;
+  /* left: 0; */
+  top: 0px;
+  height: 40px;
+  width: 40px;
+  border-top-left-radius: 24px;
+  /* background-color: blue; */
+  box-shadow: -10px -20px 0 9px black;
+
+}
+.masking_class_2::after {
+  content: "";
+  position: absolute;
+  left: 0px;
+  bottom: -40px;
+  height: 40px;
+  width: 40px;
+  border-top-left-radius: 24px;
+  /* background-color: blue; */
+  box-shadow: -10px -15px 0 9px black;
+
 }
