--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,3 +65,10 @@
   border-top-left-radius: 24px;
   box-shadow: -10px -15px 0 9px black;
 }
+
+.widget-position-right {
+  position: fixed;
+  bottom: 20px; /* Adjust as needed */
+  right: 20px; /* Adjust as needed */
+  z-index: 9999; /* Ensure it's above other content */
+}
